Use static valueOf() methods instead of new ... for better performance & lower memory usage.